--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <link rel="icon" href="/favicon.ico" />
     <link href="/src/style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+
+    <meta
+      name="description"
+      content="Pedro Silva's portfolio – Frontend developer. Explore my projects, skills, and contact info."
+    />
+
+    <title>Pedro Silva - Portfolio</title>
   </head>
   <body>
     <div id="app"></div>
